--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "prisma": {
-    "seed": "node --require esbuild-register prisma/seed.ts"
-  },
-  "scripts": {
-    "seed": "npx prisma db seed",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev src/index.ts"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "dev": "ts-node-dev src/index.ts",
+    "start": "node dist/index.js",
+    "build": "npx tsc",
+    "migrate": "npx prisma migrate dev",
+    "seed": "npx prisma db seed"
+  },
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "@types/uuid": "^9.0.7",
@@ -40,5 +38,8 @@
     "prisma": "^5.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
+  },
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
   }
 }
